--- a/css/qp.css
+++ b/css/qp.css
@@ -410,7 +410,7 @@ footer .list-inline-item a:hover{
     font-weight: bold;
     color: #fff !important;
     text-decoration: none;
-    padding: 5px 8px !important;;
+    padding: 5px 8px !important;
 }
 
 /************Home Page*******************/
