Faq Scroll added

--- a/css/qp.css
+++ b/css/qp.css
@@ -435,15 +435,43 @@ footer .list-inline-item a:hover{
   font-weight:100; 
   font-size: 3.2rem;
 }
-.i-up {
-    background-color: #71cc98;
-    /*padding: 1%;*/
-    font-size: 25px;
-    margin-top: -41px;
-    border-radius: 5px;
-}
+
 .i-up-color{
    color: #0d3c71 !important;
+}
+#scroll {
+    position:fixed;
+    cursor:pointer;
+    width:50px;
+    height:50px;
+    bottom: 20px;
+    font-size: 25px;
+    margin-top: -41px;
+    background-color:#71cc98;
+    text-indent:-9999px;
+    display:none;
+    -webkit-border-radius:60px;
+    -moz-border-radius:60px;
+    border-radius:60px
+}
+#scroll span {
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin-left:-8px;
+    margin-top:-12px;
+    height:0;
+    width:0;
+    border:8px solid transparent;
+    border-bottom-color:#ffffff;
+}
+#scroll:hover {
+    background-color: #003b71;
+    opacity:1;filter:"alpha(opacity=100)";
+    -ms-filter:"alpha(opacity=100)";
+}
+#MyNavPills ul li:hover{
+  cursor: pointer;
 }
 .nav-pills .nav-link1.active, .nav-pills .show>.nav-link1{
   background-color: transparent;
