--- a/css/qp-responsive.css
+++ b/css/qp-responsive.css
@@ -29,7 +29,19 @@ footer .list-inline-item a {
 .qp-h-recentnews-content {
     margin: 30px 0;
 }
+.news-slider-image-content h1{
+	font-size: 1.2rem;
 }
+.slick-prev {
+    left: 32%;
+    background: #71cc98 url(../img/left-arrow.png) center no-repeat;
+}
+.slick-next {
+    right: 32%;
+    background: #71cc98 url(../img/right-arrow.png) center no-repeat;
+}
+}
+
 @media screen and (max-width: 768px) {
  .news-popup-image-content h1 {
     font-size: 1rem;
