--- a/css/qp-responsive.css
+++ b/css/qp-responsive.css
@@ -36,6 +36,20 @@
     .qp-h-recentnews-content {
         margin: 30px 0;
     }
+
+    .phone-num p {
+        font-size: 28px;
+        font-weight: 300;
+    }
+    .phone-num span {
+        font-size: 28px;
+        font-weight: 900;
+    }
+    .phone-icon {
+        font-size: 80px;
+        padding-right: 30px;
+        color: #71CC98;
+    }
 }
 
 @media screen and (max-width: 768px) {
