--- a/css/qp.css
+++ b/css/qp.css
@@ -419,25 +419,49 @@ footer .list-inline-item a:hover{
 
 .phone-icon {
     display: inline-block;
-    font-size: 80px;
+    font-size: 50px;
     padding-right: 30px;
     color: #71CC98;
+    float: left;
 }
 .phone-num {
     display: inline-block;
+    float: left;
+    padding-top: 4px;
 }
 .phone-num p {
-    font-size: 28px;
+    font-size: 20px;
     font-weight: 300;
     margin-bottom: 0;
 }
 .phone-num span {
-    font-size: 28px;
+    font-size: 20px;
     font-weight: 900;
 }
 .contact-bg {
     background: #003C71;
     color: #fff;
+}
+.contact-form-textarea{
+  resize: none;
+  outline: none !important;
+  height: 140px !important;
+}
+
+.contact-submit{
+  background-color: #71cc98 !important;
+  border: none !important;
+  border-radius: 0px !important;
+  color: #fff !important;
+  width: 140px !important;
+}
+.contact-form-textarea:focus, .contact-submit:focus{
+  outline: none !important;
+  box-shadow: none !important;
+}
+.contact-submit:hover{
+  background-color: #003c71 !important;
+  transition:all 0.3s ease;
 }
 /************Contact us*******************/
 /************FAQ************************/
