--- a/css/qp.css
+++ b/css/qp.css
@@ -1,19 +1,50 @@
-
-
 @font-face {
-  font-family: Myriad Pro;
-  src: url(fonts/MyriadPro-Regular.otf);
+    font-family: 'MyriadPro';
+    src: url('../fonts/MyriadPro-Bold.otf') format('opentype');
+    font-weight: bold;
+    font-style: normal;
+
 }
 
+@font-face {
+    font-family: 'MyriadPro';
+    src: url('../fonts/MyriadPro-Light.otf') format('opentype');
+    font-weight: lighter;
+    font-style: normal;
+
+}
+@font-face {
+    font-family: 'MyriadPro';
+    src: url('../fonts/MyriadPro-Regular.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'FontAwesome';
+    src: url('../fonts/fontawesome-webfont.eot');
+    src: url('../fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/fontawesome-webfont.woff2') format('woff2'),
+         url('../fonts/fontawesome-webfont.woff') format('woff'),
+         url('../fonts/fontawesome-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+
+}
 body{
   background: #fff;
-  font-family: "Myriad Pro";
+  font-family: "MyriadPro",sans-serif;
+  font-weight: normal;
 }
 img {
   max-width: 100%;
 }
 section {
     padding: 70px 0;
+}
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    font-weight: bold;
 }
 footer {
     background: #003c72;
@@ -381,7 +412,7 @@ footer .list-inline-item a:hover{
   transition-duration: 0.3s;
   background: #71cc98;
   color: #003C71 !important;
-  padding: 7px 15px;
+  padding: 15px 30px;
 }
 .hvr-icon-wobble-horizontal:hover{
   cursor: pointer !important;
