--- a/css/qp.css
+++ b/css/qp.css
@@ -413,7 +413,16 @@ footer .list-inline-item a:hover{
     padding: 5px 8px !important;
 }
 
-/************Home Page*******************/
+/*********** Home Page Popup *************/
+section#qp-news-popup {
+    position: absolute;
+    top: 0;
+    z-index: 9999 !important;
+    display: none;
+}
+/********* Home Page Popup ends *********/
+
+/********* Home Page ends here **********/
 
 /************Contact us*******************/
 
@@ -939,7 +948,6 @@ color: #657786;
   padding-bottom: 18px;
   border-bottom: 3px solid #707070 !important;
 }
-
 .up-popup-image-content {
     position: absolute;
     bottom: 8px;
@@ -947,7 +955,6 @@ color: #657786;
     z-index: 1;
     padding: 4% 6%;
 }
-
 .up-popup-image-content h1:after {
     border-bottom: 8px solid #71CC98;
     content: '';
