events page completed

--- a/css/qp.css
+++ b/css/qp.css
@@ -985,5 +985,6 @@ color: #657786;
 .qp-h-latestnews .nav .nav-item a:hover {
     color: #003C71 !important;
     border-bottom: 3px solid #71CC98;
+    cursor: pointer;
 }
 /************Upcoming Event-pop-up ends *******************/
