--- a/css/qp.css
+++ b/css/qp.css
@@ -860,7 +860,7 @@ body.modal-open {
 input#faq-search {
     background: transparent;
     border: none;
-    color: #ffffff;
+    color: #ffffff !important;
 }
 input#faq-search:focus, button#faq-submit:focus {
     outline-color: transparent;
